documentation builder roughly working

--- a/documentation/index-template.html
+++ b/documentation/index-template.html
@@ -21,6 +21,13 @@
     <script>
       var $html = $('html');
       var $nav = $('header ul');
+
+      $('h2, h1', '.content').each(function(){
+        $(this).nextUntil('h2').wrapAll('<section></section>');
+        var $section = $(this).next('section');
+        $(this).prependTo($section);
+      });
+
       var scrollStory = $('.content').scrollStory({
         content: 'section',
         triggerOffset: 60,
