--- a/documentation/index-template.html
+++ b/documentation/index-template.html
@@ -24,17 +24,15 @@
 
       $('h2, h1', '.content').each(function(){
         $(this).nextUntil('h2').wrapAll('<section></section>');
-        var $section = $(this).next('section');
-        $(this).prependTo($section);
+        $(this).prependTo($(this).next('section'));
       });
 
       var scrollStory = $('.content').scrollStory({
         content: 'section',
         triggerOffset: 60,
         scrollOffset: 60,
-        debug: true,
         itembuild: function(ev, item){
-          item.data.navtext = item.data.navtext || item.el.find('h2').first().text();
+          item.data.navtext = item.data.navtext || item.el.find('h2').first().text() || 'Home';
           $nav.append('<li>'+item.data.navtext+'</li>');
         },
         itemfocus: function(ev, item){
