--- a/documentation/autoactive.html
+++ b/documentation/autoactive.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ScrollStory: Auto Activate First</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/base-examples.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
             <div class="story"><span>13</span></div>
         </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../src/jquery.scrollstory.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $('#status').hide();
