--- a/documentation/custom-selector.html
+++ b/documentation/custom-selector.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ScrollStory: Custom Selector</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/base-examples.css">
 </head>
 
 <body>
@@ -26,8 +26,8 @@
             <div class="custom-selector"><span>13</span></div>
         </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../src/jquery.scrollstory.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $('.custom-selector').css({'height': $(window).height() * 0.6 });
