--- a/documentation/demo.html
+++ b/documentation/demo.html
@@ -60,8 +60,8 @@
             <div class="custom">Asia</div>
             <div class="custom">Antarctica</div>
         </div>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-        <script src="../src/jquery.scrollstory.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.scrollstory.js"></script>
 		<script>
 			$(function() {
 
