--- a/documentation/from-data.html
+++ b/documentation/from-data.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ScrollStory: External data</title>
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/base-examples.css">
 </head>
 
 <body>
@@ -17,8 +17,8 @@
 
         </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../src/jquery.scrollstory.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         $.getJSON('http://www.filltext.com/?callback=?', {
