--- a/documentation/huge-list.html
+++ b/documentation/huge-list.html
@@ -50,8 +50,8 @@
         <p class="about">Generate elements from data.</p>
         <div class="stories"></div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../src/jquery.scrollstory.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.scrollstory.js"></script>
     <script>
     (function($) {
         console.time('startDownload');
